--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,8 @@
       {{ content }}
     </div>
 
+    <!-- {% include comments.html %} -->
+
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
