--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,5 +1,6 @@
 <!-- {% if site.disqus %} -->
-{% if page.disqus %}
+<!-- {% if page.disqus %} -->
+{% if page.comment %}
 <div class="comments">
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
