--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,6 +1,4 @@
-<!-- {% if site.disqus %} -->
-<!-- {% if page.disqus %} -->
-{% if page.comment %}
+{% if site.disqus %}
 <div class="comments">
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
