--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,6 +13,7 @@ $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
 $white: #fff;
+$pageGray: #E8E8E8;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
