messing with style changes

--- a/style.scss
+++ b/style.scss
@@ -18,12 +18,13 @@ html {
 }
 
 body {
-	background: $pageGray;
+	background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
 
 .container {
+  background: $pageGray;
   margin: 0 auto;
   max-width: 740px;
   padding: 0 10px;
