messing with style changes

--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,7 @@ html {
 
 body {
 	background: $white;
+  background-image: url("https://cloud.githubusercontent.com/assets/12622205/7875278/ed004058-0588-11e5-8b8e-d93b14794c19.png");
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
