--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,9 @@ html {
 
 body {
 	background: $white;
-  background-image: url("https://cloud.githubusercontent.com/assets/12622205/7875278/ed004058-0588-11e5-8b8e-d93b14794c19.png");
+  background-image: url("https://cloud.githubusercontent.com/assets/12622205/7875334/9c8227bc-0589-11e5-8310-967c31262b1e.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
