--- a/style.scss
+++ b/style.scss
@@ -38,7 +38,7 @@ body {
   background: $white;
   margin: 0 auto;
   max-width: 740px;
-  max-height: 5px;
+  height: 5px;
   padding: 0 10px;
   width: 100%;
 }
