--- a/style.scss
+++ b/style.scss
@@ -77,10 +77,19 @@ h4 {
   color: $gray;
 }
 
+// code {
+//     font-family: monospace;
+//     background: $white;
+//     padding: 0 2px;
+// }
+
 code {
-    font-family: monospace;
-    background: $white;
-    padding: 0 2px;
+  margin: 0 2px;
+  padding: 0 5px;
+  white-space: nowrap;
+  border: 1px solid #eaeaea;
+  background-color: #f8f8f8;
+  border-radius: 3px; }
 }
 
 p {
