--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,7 +13,7 @@ $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
 $white: #fff;
-$pageGray: #F0F0F0;
+$pageGray: #EBF0FF;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
