--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,7 +13,7 @@ $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
 $white: #fff;
-$pageGray: #EBF0FF;
+$pageGray: #ECF7FC;
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
