--- a/style.scss
+++ b/style.scss
@@ -85,10 +85,10 @@ h4 {
 
 code {
   margin: 0 2px;
-  padding: 0 5px;
+  padding: 0 4px;
   white-space: nowrap;
   border: 1px solid #eaeaea;
-  background-color: #f8f8f8;
+  background-color: #DDDFFF;
   border-radius: 6px;
 }
 
