--- a/style.scss
+++ b/style.scss
@@ -88,7 +88,7 @@ code {
   padding: 0 4px;
   white-space: nowrap;
   border: 1px solid #eaeaea;
-  background-color: #DDDFFF;
+  background-color: #E8EAFE;
   border-radius: 6px;
 }
 
