--- a/style.scss
+++ b/style.scss
@@ -28,12 +28,14 @@ body {
 
 .container {
   background: $pageGray;
-  margin: 0 auto;
+  // margin: 0 auto;
+  margin: 0;
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
 }
 
+// added this to create a little seperation between posts in blog view
 #spacer {
   background: $white;
   margin: 0 auto;
