--- a/_includes/twitter.html
+++ b/_includes/twitter.html
@@ -1,2 +1,9 @@
-<a href="https://twitter.com/intent/tweet?screen_name=test&text=some%20text" class="twitter-mention-button" data-size="large" data-dnt="true">Tweet to @test</a>
+<a href="https://twitter.com/intent/tweet?screen_name=skywaylabs&text=put%20something%20good%20here" class="twitter-mention-button" data-size="large" data-dnt="true">Tweet to @test</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+
+<!-- below is what Brett T has on his site - figure out how to ape it -->
+<!--
+<a target="_blank" rel="nofollow" href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Fbrettterpstra.com%2F2015%2F04%2F24%2Fmodifying-jekyll-post-data-with-inline-tags%2F&amp;text=Modifying+Jekyll+post+data+with+inline+tags&amp;url=http%3A%2F%2Fbrettterpstra.com%2F2015%2F04%2F24%2Fmodifying-jekyll-post-data-with-inline-tags%2F&amp;via=ttscoff" title="Tweet this post">Tweet</a>
+
+Modifying Jekyll post data with inline tags http://brettterpstra.com/2015/04/24/modifying-jekyll-post-data-with-inline-tags/ via @ttscoff -->
