--- a/_includes/twitter.html
+++ b/_includes/twitter.html
@@ -1,4 +1,4 @@
-<a href="https://twitter.com/intent/tweet?screen_name=skywaylabs&text=put%20something%20good%20here" class="twitter-mention-button" data-size="large" data-dnt="true">Tweet to @test</a>
+<a href="https://twitter.com/intent/tweet?screen_name=skywaylabs&text=put%20something%20good%20here" class="twitter-mention-button" data-size="large" data-dnt="true">Tweet to @skywaylabs</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 
