--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,6 @@ layout: default
   <div class="entry">
     {{ content }}
   </div>
-
+  <p>© 2015. All rights reserved.</p>
   {% include disqus.html %}
 </article>
