moving copyright notice around

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
-
+    <p>© 2015. All rights reserved.</p>
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
