--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,6 @@
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
-    <p>© 2015. All rights reserved.</p>
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
@@ -46,6 +45,8 @@
         </footer>
       </div>
     </div>
+    <!--FIXME: this should be in includes witih proper css  -->
+    <p align="right">© 2015. All rights reserved.</p>
 
     {% include analytics.html %}
   </body>
